styles.css
/* ... */
@media (min-width:1200px) {
  .fs-1 {
    font-size: 2.5rem !important
  }

  .fs-2 {
    font-size: 2rem !important
  }

  .fs-3 {
    font-size: 1.75rem !important
  }

  .fs-4 {
    font-size: 1.5rem !important
  }
}

@media print {
  .d-print-inline {
    display: inline !important
  }

  .d-print-inline-block {
    display: inline-block !important
  }

  .d-print-block {
    display: block !important
  }

  .d-print-grid {
    display: grid !important
  }

  .d-print-table {
    display: table !important
  }

  .d-print-table-row {
    display: table-row !important
  }

  .d-print-table-cell {
    display: table-cell !important
  }

  .d-print-flex {
    display: flex !important
  }

  .d-print-inline-flex {
    display: inline-flex !important
  }

  .d-print-none {
    display: none !important
  }


}


.gif-row{
  width: 100%;
}
.gif-row img {
  cursor: pointer;
    width: inherit;
}

.gif-row .gif-file {
  width: inherit;
  display: none;
}

.image-links{
  width: inherit;
}
#profile-pic{
  width: 100px;
  height: 100px;
  border-radius: 75px;
  margin: 5% 5% 5% 5%;
  cursor: default;
}
#name{
  cursor: default;
  font-size: 2.5rem;
}
#underscore{
  cursor: default;
  font-size: 3rem;
    animation-duration: 2.5s;
    animation-name: underscorefade;
    animation-iteration-count: infinite;
}

#gifs-rows{
  width: 100%;
}
#gifs-rows img {
  cursor: pointer;
    width: inherit;
}

#gifs-rows .gif-file {
  width: inherit;
  display: none;
}

#portfolio{

width: 100%;
  font-size: 8.5vw;
}

#projects{
width: 100%;
  font-size: 3vw;
  margin-bottom: 3rem;
}

#main-section{
  padding-top: 0px;
  height: 80rem;
  width: 100%;
}

#sub-main-section{
  animation-duration: .5s;
  animation-name: slideup;
  animation-iteration-count: 1;
}
#arrow-button{
  cursor: default;
  font-size: 1.5vw;
  color: white;
  animation-duration: 3s;
  animation-name: fadein;
  animation-iteration-count: infinite;
}
.fa-angle-down:hover{
  cursor:pointer;
  color: red;
  animation-duration: 3s;
  animation-name: fadein;
  animation-iteration-count: infinite;

}

#gif-file-tanks{
  animation-duration: 2s;
  animation-name: gif-fadein;
  animation-iteration-count: 1;
}
#gif-file-chess{
  animation-duration: 2s;
  animation-name: gif-fadein;
  animation-iteration-count: 1;
}
#gif-file-fulkerson{
  animation-duration: 2s;
  animation-name: gif-fadein;
  animation-iteration-count: 1;
}
#gif-file-graph{
  animation-duration: 2s;
  animation-name: gif-fadein;
  animation-iteration-count: 1;
}
#gif-file-critterworld{
  animation-duration: 2s;
  animation-name: gif-fadein;
  animation-iteration-count: 1;
}
#gif-file-connect4{
  animation-duration: 2s;
  animation-name: gif-fadein;
  animation-iteration-count: 1;
}
#gif-file-Uno{
  animation-duration: 2s;
  animation-name: gif-fadein;
  animation-iteration-count: 1;
}
#gif-file-LinearRegression{
  animation-duration: 2s;
  animation-name: gif-fadein;
  animation-iteration-count: 1;
}
#gif-file-Egos{
  animation-duration: 2s;
  animation-name: gif-fadein;
  animation-iteration-count: 1;
}
#gif-file-MeetUp{
  animation-duration: 2s;
  animation-name: gif-fadein;
  animation-iteration-count: 1;
}
#gif-file-adopt{
  animation-duration: 2s;
  animation-name: gif-fadein;
  animation-iteration-count: 1;
}
#gif-file-dslabs{
  animation-duration: 2s;
  animation-name: gif-fadein;
  animation-iteration-count: 1;
}
#gif-file-DBMS{
  animation-duration: 2s;
  animation-name: gif-fadein;
  animation-iteration-count: 1;
}
#gif-file-Speed{
  animation-duration: 2s;
  animation-name: gif-fadein;
  animation-iteration-count: 1;
}
@keyframes fadein {
  from {
    opacity: .1;
  }

  50% {
    opacity: 1;
  }

  to {
    opacity: 0.1;
  }
}

@keyframes gif-fadein{
  from {
    opacity: 0;

  }

  to {
    opacity: 1;
  }
}

@keyframes slideup{
  from {
    opacity: 0;
    margin-top: 100%;
    position: absolute;
  }

  to {
    opacity: 1;
    margin-top: 0%;
    position: inherit;
  }
}

@keyframes underscorefade {
  from {
    opacity: 1;
  }

  25%{
      opacity: 1;
  }
  75% {
    opacity: .1;
  }

  to {
    opacity: 1;
  }
}

#the-hovering{
    animation-duration: 5s;
    animation-name: picIncrease;
    animation-iteration-count: infinite;
    position:absolute;
    padding-top: 0 !important;

}

@keyframes picIncrease {
  from {
    margin-top: 1rem;
  }

  50%{
    margin-top: 2rem;
  }


  to {

    margin-top: 1rem;
  }
}
/*# sourceMappingURL=bootstrap.min.css.map */

.top-buttons{
  width = 100%;
  display: flex;
  margin-left: 31.5%;
  margin-right: 31.5%;
  margin-bottom: 3vw;
}

.top-buttons-two{
  font-size: 3vw;
}

.btn-lg{
  width: 100vw;
}

.linkedin-button{
  display: inline-flex;
  width: 18vw;
}
.github-button{
  display: inline-flex;
  width: 18vw;

}
html,body{
    overflow-x: hidden;
}

.navbar-custom .nav-link {
  font-size: 2.0rem;
  font-weight: 500;
  margin-right: 30px;
}
.navbar-brand img {
  height: 40px; 
  width: auto; /* Maintain aspect ratio */
  border-radius: 50%; /* Circular image */
  margin-right: 10px;
}

#underscore {
  margin-right: 60px; /* Adds space between underscore and nav items */
}

@media only screen and (max-width: 641px)
.container {
    max-width: 360px;
    margin: 0 auto;
}

.timeline {
  position: relative;
  padding: 0;
  list-style: none;
}
.timeline:before {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 40px;
  width: 2px;
  margin-left: -1.5px;
  content: "";
  background-color: #e9ecef;
}
.timeline > li {
  position: relative;
  min-height: 50px;
  margin-bottom: 50px;
}
.timeline > li:after, .timeline > li:before {
  display: table;
  content: " ";
}
.timeline > li:after {
  clear: both;
}
.timeline > li .timeline-panel {
  position: relative;
  float: right;
  width: 100%;
  padding: 0 20px 0 100px;
  text-align: left;
}
.timeline > li .timeline-panel:before {
  right: auto;
  left: -15px;
  border-right-width: 15px;
  border-left-width: 0;
}
/* ... */

